troubleshooting complete, all genre data uploaded and working correctly!

--- a/notebooks/eda_and_formatting.ipynb
+++ b/notebooks/eda_and_formatting.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +985,7 @@
        "4  Drama, Fantasy, Horror, Mystery, Science-Ficti...         America  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2837,6 +2837,286 @@
    "outputs": [],
    "source": [
     "df_genre_counts.to_csv('../data/df_genre_counts.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25818"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_countries = list(df_details.country)\n",
+    "len(list_countries)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'America': 5637,\n",
+       "         'United Kingdom': 931,\n",
+       "         'Australia': 224,\n",
+       "         'Germany': 211,\n",
+       "         'France': 343,\n",
+       "         'Spain': 98,\n",
+       "         'India': 355,\n",
+       "         'Mexico': 42,\n",
+       "         'Canada': 615,\n",
+       "         nan: 15471,\n",
+       "         'Japan': 466,\n",
+       "         'South Korea': 136,\n",
+       "         'Hong Kong': 125,\n",
+       "         'Czechia': 24,\n",
+       "         'Belgium': 86,\n",
+       "         'Finland': 13,\n",
+       "         'China': 90,\n",
+       "         'Austria': 25,\n",
+       "         'Italy': 148,\n",
+       "         'Thailand': 25,\n",
+       "         'Brazil': 34,\n",
+       "         'Israel': 21,\n",
+       "         'Egypt': 13,\n",
+       "         'Ireland': 59,\n",
+       "         'Ukraine': 4,\n",
+       "         'United Arab Emirates': 8,\n",
+       "         'Hungary': 12,\n",
+       "         'Indonesia': 18,\n",
+       "         'Iran': 5,\n",
+       "         'Denmark': 59,\n",
+       "         'Syria': 2,\n",
+       "         'New Zealand': 37,\n",
+       "         'Romania': 20,\n",
+       "         'Switzerland': 17,\n",
+       "         'Uruguay': 1,\n",
+       "         'Iceland': 8,\n",
+       "         'Norway': 24,\n",
+       "         'Turkey': 19,\n",
+       "         'Ghana': 2,\n",
+       "         'Singapore': 6,\n",
+       "         'Russia': 25,\n",
+       "         'Sweden': 25,\n",
+       "         'Poland': 15,\n",
+       "         'Philippines': 41,\n",
+       "         'Bulgaria': 15,\n",
+       "         'Argentina': 50,\n",
+       "         'Netherlands': 20,\n",
+       "         'British Indian Ocean Territory': 2,\n",
+       "         'Colombia': 14,\n",
+       "         'South Africa': 30,\n",
+       "         'Taiwan': 38,\n",
+       "         'Pakistan': 6,\n",
+       "         'Puerto Rico': 5,\n",
+       "         'Portugal': 1,\n",
+       "         'Cambodia': 2,\n",
+       "         'Peru': 3,\n",
+       "         'Croatia': 8,\n",
+       "         'Nigeria': 4,\n",
+       "         'Chile': 10,\n",
+       "         'Kenya': 2,\n",
+       "         'Malaysia': 5,\n",
+       "         'Botswana': 1,\n",
+       "         'Vietnam': 1,\n",
+       "         'Macedonia': 1,\n",
+       "         'Tanzania': 2,\n",
+       "         'Iraq': 2,\n",
+       "         'Luxembourg': 3,\n",
+       "         'Venezuela': 4,\n",
+       "         'Latvia': 1,\n",
+       "         'Paraguay': 1,\n",
+       "         'Estonia': 1,\n",
+       "         'Uganda': 1,\n",
+       "         'Afghanistan': 2,\n",
+       "         'Greece': 4,\n",
+       "         'Jamaica': 1,\n",
+       "         'Belarus': 1,\n",
+       "         'Georgia': 1,\n",
+       "         'Serbia': 1,\n",
+       "         'Qatar': 1,\n",
+       "         'Guatemala': 1,\n",
+       "         'Ecuador': 2,\n",
+       "         'Morocco': 2,\n",
+       "         'Bangladesh': 1,\n",
+       "         'Bosnia and Herzegovina': 1,\n",
+       "         'Ethiopia': 1,\n",
+       "         'Algeria': 4,\n",
+       "         'Virgin Islands (U.S.)': 1,\n",
+       "         'Mongolia': 1,\n",
+       "         'Mozambique': 1,\n",
+       "         'Albania': 1,\n",
+       "         'Rwanda': 1,\n",
+       "         'Lithuania': 1,\n",
+       "         'Palestine': 1,\n",
+       "         'Mali': 1,\n",
+       "         'Trinidad and Tobago': 2,\n",
+       "         'Liberia': 1,\n",
+       "         'Azerbaijan': 1,\n",
+       "         'Equatorial Guinea': 1,\n",
+       "         'Cuba': 3,\n",
+       "         'Lebanon': 1,\n",
+       "         'Cyprus': 1,\n",
+       "         'Fiji': 1,\n",
+       "         'Dominican Republic': 1,\n",
+       "         'Bahamas': 1,\n",
+       "         'Bolivia': 1})"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Counter(list_countries)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_country = {'country': list(Counter(list_countries).keys()),\n",
+    "                'count': list(Counter(list_countries).values())}\n",
+    "df_country_counts = pd.DataFrame(data_country,columns = ['country','count'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Afghanistan',\n",
+       " 'Albania',\n",
+       " 'Algeria',\n",
+       " 'America',\n",
+       " 'Argentina',\n",
+       " 'Australia',\n",
+       " 'Austria',\n",
+       " 'Azerbaijan',\n",
+       " 'Bahamas',\n",
+       " 'Bangladesh',\n",
+       " 'Belarus',\n",
+       " 'Belgium',\n",
+       " 'Bolivia',\n",
+       " 'Bosnia and Herzegovina',\n",
+       " 'Botswana',\n",
+       " 'Brazil',\n",
+       " 'British Indian Ocean Territory',\n",
+       " 'Bulgaria',\n",
+       " 'Cambodia',\n",
+       " 'Canada',\n",
+       " 'Chile',\n",
+       " 'China',\n",
+       " 'Colombia',\n",
+       " 'Croatia',\n",
+       " 'Cuba',\n",
+       " 'Cyprus',\n",
+       " 'Czechia',\n",
+       " 'Denmark',\n",
+       " 'Dominican Republic',\n",
+       " 'Ecuador',\n",
+       " 'Egypt',\n",
+       " 'Equatorial Guinea',\n",
+       " 'Estonia',\n",
+       " 'Ethiopia',\n",
+       " 'Fiji',\n",
+       " 'Finland',\n",
+       " 'France',\n",
+       " 'Georgia',\n",
+       " 'Germany',\n",
+       " 'Ghana',\n",
+       " 'Greece',\n",
+       " 'Guatemala',\n",
+       " 'Hong Kong',\n",
+       " 'Hungary',\n",
+       " 'Iceland',\n",
+       " 'India',\n",
+       " 'Indonesia',\n",
+       " 'Iran',\n",
+       " 'Iraq',\n",
+       " 'Ireland',\n",
+       " 'Israel',\n",
+       " 'Italy',\n",
+       " 'Jamaica',\n",
+       " 'Japan',\n",
+       " 'Kenya',\n",
+       " 'Latvia',\n",
+       " 'Lebanon',\n",
+       " 'Liberia',\n",
+       " 'Lithuania',\n",
+       " 'Luxembourg',\n",
+       " 'Macedonia',\n",
+       " 'Malaysia',\n",
+       " 'Mali',\n",
+       " 'Mexico',\n",
+       " 'Mongolia',\n",
+       " 'Morocco',\n",
+       " 'Mozambique',\n",
+       " 'Netherlands',\n",
+       " 'New Zealand',\n",
+       " 'Nigeria',\n",
+       " 'Norway',\n",
+       " 'Pakistan',\n",
+       " 'Palestine',\n",
+       " 'Paraguay',\n",
+       " 'Peru',\n",
+       " 'Philippines',\n",
+       " 'Poland',\n",
+       " 'Portugal',\n",
+       " 'Puerto Rico',\n",
+       " 'Qatar',\n",
+       " 'Romania',\n",
+       " 'Russia',\n",
+       " 'Rwanda',\n",
+       " 'Serbia',\n",
+       " 'Singapore',\n",
+       " 'South Africa',\n",
+       " 'South Korea',\n",
+       " 'Spain',\n",
+       " 'Sweden',\n",
+       " 'Switzerland',\n",
+       " 'Syria',\n",
+       " 'Taiwan',\n",
+       " 'Tanzania',\n",
+       " 'Thailand',\n",
+       " 'Trinidad and Tobago',\n",
+       " 'Turkey',\n",
+       " 'Uganda',\n",
+       " 'Ukraine',\n",
+       " 'United Arab Emirates',\n",
+       " 'United Kingdom',\n",
+       " 'Uruguay',\n",
+       " 'Venezuela',\n",
+       " 'Vietnam',\n",
+       " 'Virgin Islands (U.S.)',\n",
+       " nan]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(df_country_counts.sort_values(by = 'country').country)"
    ]
   },
   {
